<resources>
    <string name="app_name">Cards</string>
    <string name="card_question_label">QUESTION</string>
    <string name="card_question_hint">Input the question text</string>
    <string name="card_answer_label">ANSWER</string>
    <string name="card_answer_hint">Input the answer text</string>
    <string name="question_text">Tree</string>
    <string name="answer_button_text">Check answer</string>

    <string name="difficult_button_title">Difficult</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="easy_button_title">Easy</string>

    <string name="study_button">STUDY CARDS</string>
    <string name="end_study_button">END STUDY</string>
    <string name="save_button">SAVE</string>
    <string name="no_study">There are no more cards today</string>
    <string name="not_available">Not available</string>
    <string name="day_text">Day</string>
    <string name="choose_deck">CHOOSE DECK</string>
    <string name="delete_button">REMOVE</string>
    <string name="add_card_button">ADD CARD</string>
    <string name="back_button">BACK</string>
    <string name="details_button">details</string>

    <string name="easiness_text">eas</string>
    <string name="repetition_text">rep</string>
    <string name="interval_text">int</string>
    <string name="nextDate_text">next</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="decks">Decks</string>
    <string name="board_title">Activate the board</string>
    <string name="max_cards_title">Max number of cards</string>
    <string name="settings">Settings</string>
</resources>
