<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textViewImportantSize"
            android:text="@string/question_text"
            tools:text="Texto para el entorno"/>

        <Button
            android:id="@+id/answer_button"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_button_text" />

        <LinearLayout
            android:id="@+id/difficulty_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible"
            android:gravity="center"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/difficult_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficult_button_title"
                android:backgroundTint="@android:color/holo_red_light"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doubt_button_title"
                android:backgroundTint="@android:color/holo_blue_light"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_button_title"
                android:backgroundTint="@android:color/holo_green_light"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>