<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons1"
        android:layout_margin="@dimen/LinearMargin"
        android:layout_centerHorizontal="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/day_button"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/day_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_button"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:text="@string/day_text"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choose_deck_button"
        android:text="@string/choose_deck"
        tools:ignore="ButtonStyle" />
    </LinearLayout>

        <Button
            android:id="@+id/study_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_button"
            tools:ignore="ButtonStyle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttons1"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/study_button">
    </FrameLayout>
</RelativeLayout>